# huanhuan

./: .gitignore  chat_template.py  check_gpu.py  eval_checkpoints.py  generate.py  main.py  pyproject.toml
.ipynb_checkpoints/: apply-checkpoint.py  main-checkpoint.py
output/qwen_4b_lora/: adapter_config.json
